# chameleon_partials

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  WARP.md  great-docs.yml  pyproject.toml  requirements-dev.txt  ruff.toml  setup.py  skill_extra_body.md
chameleon_partials/: __init__.py
docs/: build-timings.json  changelog.html  changelog.md  index.html  license.html  llms-full.txt  llms.txt  package-info.html  package-info.md  robots.txt  search.json  sitemap.xml  skill.md  skills.html
docs/.well-known/agent-skills/: index.json
docs/.well-known/skills/default/: SKILL.md
docs/reference/: PartialsException.html  PartialsException.md  extend_model.html  extend_model.md  index.html  index.md  register_extensions.html  register_extensions.md  render_partial.html  render_partial.md
example/: MANIFEST.in  README.md  development.ini  production.ini  pytest.ini  setup.py  testing.ini
example/demo_chameleon_partials/: __init__.py  routes.py
example/demo_chameleon_partials/models/: category_model.py
example/demo_chameleon_partials/services/: video_service.py
example/demo_chameleon_partials/templates/errors/: 404.pt
example/demo_chameleon_partials/templates/home/: listing.pt
example/demo_chameleon_partials/templates/shared/: _layout.pt
example/demo_chameleon_partials/templates/shared/partials/: video_image.pt  video_square.pt
example/demo_chameleon_partials/views/: home.py  notfound.py  partials_middleware.py
example/tests/: conftest.py  test_functional.py  test_views.py
scripts/: build_docs.py  serve_docs.py
tests/: test_rendering.py
tests/test_templates/render/: recursive.pt  recursive_inner.pt  with_data.pt  with_layout.pt
tests/test_templates/shared/: _layout.pt
